# eurbanizam-app

./: .env.example  .gitignore  ARCHITECTURE_SUMMARY.md  README.md  admin.py  api_post_err.txt  connect_VPS.bat  db_search.txt  discover.txt  finance_settings.json  git_pull.bat  git_push.bat  post_checks.txt  pre_checks.txt  pull_to_VPS.bat  pyproject.toml  requirements.txt  run_Codex.bat  settings.json  settings.template.json  start_app.bat  start_new_ui.bat  vps_backup.sh  vps_db_checks.py  vps_debug.sh  vps_manual_migrate.py  vps_migrate.py  vps_patch_settings.py
_prototype/: FinanceCaseWorkspace.tsx  PORTING_GUIDE.md  StatPill.tsx  StatusBadge.tsx  index.css
admin_pages/: __init__.py  finance.py
apps/api/: main.py
apps/api/core/: case_documents.py  cases.py  common.py  (+6 more)
apps/web/: next.config.ts  package-lock.json  package.json
deploy/vps/: README.md  VPS_STEPS.md  eurbanizam-api.service  eurbanizam-web.service  nginx-eurbanizam-app.conf
docs/: 00_PROJECT_SPECS.md  01_PATH_CONTRACT.md  02_OPERATIONS.md  03_PHONE_POLICY.md  04_PRODUCTION_URL_CONFIG.md  HELP.md  PHASE_PLAN_V3.md  RECAP.md  financial_records.md
documents/: FINANCE_MODIFICATIONS_DEPLOYMENT.md  FINANCE_WORKFLOW.md
tools/: daily_report.py  probe_list_status_snapshot.py  project_checks.py  pull_to_VPS.ps1  runtime_identity.py  scrape_full_two_phase_to_db.py  smart_sync.py  system_healthcheck.py  telegram_bot_server.py
vps-landing/: eurbanizam-bot.service  eurbanizam-daily.service  eurbanizam-daily.timer  eurbanizam-healthcheck.service  eurbanizam-healthcheck.timer  nginx-eurbanizam-block.conf
(+41 files in other folders)
